--- a/client/paneless/src/components/Navbar/index.scss
+++ b/client/paneless/src/components/Navbar/index.scss
@@ -1,5 +1,5 @@
 .navbar {
-    background:transparent;
+    background:#FFBF00;
     width:100%;
     height:15vh;
     display:flex;
@@ -61,14 +61,16 @@
         
 }
 .logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height:300px;
-    width:300px;
+    position:absolute;
+    height:250px;
+    width:250px;
+    right:85vw;
+    bottom:80%;
+  
+  
     
 }
 
 .login-link {
-    margin-left: 35%;
+    margin-left: 15%;
 }
