--- a/client/paneless/src/index.css
+++ b/client/paneless/src/index.css
@@ -11,7 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-html {
+/* html {
   font-size: 62.5%;
   background-image: url('./assets/images/background.jpg');
   background-repeat: no-repeat;
@@ -20,4 +20,4 @@ html {
   width: 100%;
   height: 100%;
 }
-
+ */
