--- a/client/paneless/src/components/Navbar/index.scss
+++ b/client/paneless/src/components/Navbar/index.scss
@@ -13,6 +13,7 @@
         display: block;
         padding-top:7vh;
         height:15vh;
+        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
         position: relative;
         text-decoration: none;
