--- a/client/paneless/src/components/Navbar/index.scss
+++ b/client/paneless/src/components/Navbar/index.scss
@@ -1,29 +1,45 @@
+
 .navbar {
-    background:#FFBF00;
-    width:100%;
-    height:15vh;
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    gap:2%;
+    background: orange;
+    height: 8vh;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+.navbar.active {
+background: linear-gradient(90deg, rgb(255,140,0) 0%, rgb(255,69,0) 100%);
+}
+
+
+
+.navbar-container {
+    
+    
+   display:flex;
+   justify-content: center;
+   align-items: center;
+   height:80px;
+   max-width: 1500px;
+    
   
     a{
-        font-size: 18px;
+        font-size: 15px;
         color:black;
-        display: block;
-        padding-top:7vh;
-        height:15vh;
-        font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
-        position: relative;
+        width:12rem;
+        text-shadow: .2px .2px black;
+     
+        
+       font-family:Verdana, Geneva, Tahoma, sans-serif;
         text-decoration: none;
 
-        i {
-            transition: all 0.3s ease-out;
-        }
+    
 
         &:hover {
-            color:blue;
+            color:white;
             
 
            
@@ -51,16 +67,22 @@
         
 }
 .logo {
-    position:absolute;
+    position:relative;
     height:250px;
     width:250px;
-    right:85vw;
-    bottom:80%;
-  
+    top:1rem;
+    right:10rem;
   
     
 }
 
 .login-link {
     margin-left: 15%;
+}
+.create-link {
+    border-style:solid;
+    border-radius:5px;
+   
+    
+    
 }
