--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -3,10 +3,11 @@
     top: -1%;
     height:25vh;
     width:25vw;
-    left:35%;
+    left:40%;
     background-image: url('../../assets/images/transparent.png');
     background-position: center;
     background-size: cover;
+    animation:fadeIn 4s
    
 }
 
@@ -15,71 +16,113 @@
     top:28%;
     height:25vh;
     width:35vw;
-    left:30%;
-    color:white;
+    left:35%;
+    color:orange;
     animation: fadeIn 4s;
     text-align: center;
     font-family:sans-serif;
     text-shadow: 2px 2px black;
     font-size: 50px;
+    border-radius:15px;
+    border-style:solid;
+    background-color:white;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
-.logo-animate {
-    position: absolute;
-    top: 0%;
-    height:10vh;
-    width:10vw;
-    left:100%;
-    background-image: url('../../assets/images/transparent.png');
-    background-position: center;
-    background-size: cover;
-    animation-name: example;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-}
-@keyframes example {
-    0%   { left:100%; top:0px;}
-    10%  { left:100%; top:20%;}
-    20%  { left:100%; top:40%;}
-    30%  { left:100%; top:60%;}
-    40% { left:100%; top:80%;}
-    50% { left:100%; top:100%;}
-    60% { left:100%; top:80%;}
-    70%  { left:100%; top:60%;}
-    80%  { left:100%; top:40%;}
-    90%  { left:100%; top:20%;}
-    100%   { left:100%; top:0px;}
+// .logo-animate {
+//     position: absolute;
+//     top: 0%;
+//     height:10vh;
+//     width:10vw;
+//     left:100%;
+//     background-image: url('../../assets/images/transparent.png');
+//     background-position: center;
+//     background-size: cover;
+//     animation-name: example;
+//     animation-duration: 10s;
+//     animation-iteration-count: infinite;
+//     animation-timing-function: linear;
+// }
+// @keyframes example {
+//     0%   { left:100%; top:0px;}
+//     10%  { left:100%; top:20%;}
+//     20%  { left:100%; top:40%;}
+//     30%  { left:100%; top:60%;}
+//     40% { left:100%; top:80%;}
+//     50% { left:100%; top:100%;}
+//     60% { left:100%; top:80%;}
+//     70%  { left:100%; top:60%;}
+//     80%  { left:100%; top:40%;}
+//     90%  { left:100%; top:20%;}
+//     100%   { left:100%; top:0px;}
    
-}
-  .logo-animatee {
-    position: absolute;
-    top: 0%;
-    height:10vh;
-    width:10vw;
-    right:100%;
-    background-image: url('../../assets/images/transparent.png');
-    background-position: center;
-    background-size: cover;
-    animation-name:testing;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-  }
-  @keyframes testing {
-    0%   { right:100%; top:100%;}
-    10%  { right:100%; top:80%;}
-    20%  { right:100%; top:60%;}
-    30%  { right:100%; top:40%;}
-    40% { right:100%; top:20%;}
-    50% { right:100%; top:0%;}
-    60% { right:100%; top:20%;}
-    70%  { right:100%; top:40%;}
-    80%  { right:100%; top:60%;}
-    90%  { right:100%; top:80%;}
-    100%   { right:100%; top:100%;}
-  }
+// }
+//   .logo-animatee {
+//     position: absolute;
+//     top: 0%;
+//     height:10vh;
+//     width:10vw;
+//     right:100%;
+//     background-image: url('../../assets/images/transparent.png');
+//     background-position: center;
+//     background-size: cover;
+//     animation-name:testing;
+//     animation-duration: 10s;
+//     animation-iteration-count: infinite;
+//     animation-timing-function: linear;
+//   }
+//   @keyframes testing {
+//     0%   { right:100%; top:100%;}
+//     10%  { right:100%; top:80%;}
+//     20%  { right:100%; top:60%;}
+//     30%  { right:100%; top:40%;}
+//     40% { right:100%; top:20%;}
+//     50% { right:100%; top:0%;}
+//     60% { right:100%; top:20%;}
+//     70%  { right:100%; top:40%;}
+//     80%  { right:100%; top:60%;}
+//     90%  { right:100%; top:80%;}
+//     100%   { right:100%; top:100%;}
+//   }
 .testing {
   height:50vh;
   width:100%;
+}
+.contactbtn {
+  height:5vh;
+  width:10vw;
+  border-radius:5px;
+  background-color:#0074B7;
+  color:orange;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+  0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size:20px;
+}
+
+.quotebtn {
+  height:5vh;
+  width:10vw;
+  border-radius:5px;
+  background-color:#0074B7;
+  color:orange;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+  0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size:20px;
+}
+.quotebtn:hover {
+  background-color: white;
+  color:black;
+}
+.contactbtn:hover {
+  background-color: white;
+  color:black;
+}
+.btn-alignment {
+  display:flex;
+  flex-direction:row;
+  justify-content: center;
+  gap:5%;
 }
