--- a/client/paneless/src/components/Navbar/index.scss
+++ b/client/paneless/src/components/Navbar/index.scss
@@ -1,7 +1,8 @@
 
 .navbar {
-    background: orange;
+    background:orange;
     height: 8vh;
+   
     display: flex;
     justify-content:center;
     align-items: center;
@@ -29,8 +30,9 @@ background: linear-gradient(90deg, rgb(255,140,0) 0%, rgb(255,69,0) 100%);
     a{
         font-size: 15px;
         color:black;
-        width:12rem;
+        width:25rem;
         text-shadow: .2px .2px black;
+      
      
         
        font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -39,22 +41,18 @@ background: linear-gradient(90deg, rgb(255,140,0) 0%, rgb(255,69,0) 100%);
     
 
         &:hover {
-            color:white;
+            color:blue;
+            font-size:16px;
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+            
             
 
            
 
-            &:after {
-                opacity: 1;
-
-            }
+          
 
         }
 
-            &:after {
-                
-            }
-         
          
 
     }
