--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -20,9 +20,9 @@
     color:orange;
     animation: fadeIn 4s;
     text-align: center;
-    font-family:sans-serif;
-    text-shadow: 2px 2px black;
-    font-size: 50px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-shadow: 1px 1px black;
+    font-size: 43px;
     border-radius:15px;
     border-style:solid;
     background-color:white;
@@ -97,7 +97,7 @@
   color:orange;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
   0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
 }
 
@@ -109,7 +109,7 @@
   color:orange;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
   0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
 }
 .quotebtn:hover {
