--- a/client/paneless/src/components/Navbar/index.scss
+++ b/client/paneless/src/components/Navbar/index.scss
@@ -1,86 +1,96 @@
-
-.navbar {
-    background:orange;
-    height: 8vh;
-   
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
+nav {
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+    background: #1b2430;
+    padding: 20px 80px;
+    box-shadow: 0 5px 15px rgba(0,0,0, 0.06);
+    height:10vh;
+    position:sticky;
     top: 0;
     z-index: 999;
-}
-.navbar.active {
-background: linear-gradient(90deg, rgb(255,140,0) 0%, rgb(255,69,0) 100%);
-}
-
-
-
-.navbar-container {
     
-    
-   display:flex;
-   justify-content: center;
-   align-items: center;
-   height:80px;
-   max-width: 1500px;
-    
-  
-    a{
-        font-size: 15px;
-        color:black;
-        width:25rem;
-        text-shadow: .2px .2px black;
-      
-     
-        
-       font-family:Verdana, Geneva, Tahoma, sans-serif;
-        text-decoration: none;
-
-    
-
-        &:hover {
-            color:blue;
-            font-size:16px;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            
-            
-
-           
-
-          
-
+    a.active {
+        svg{
+            color: #17cf97;
         }
-
-         
-
+} }
+#navbar{
+    display:flex;
+    align-items: center;
+    justify-content:center;
+}
+#navbar li{
+    list-style:none;
+    padding: 0 20px;
+    position: relative;
+}
+#navbar li a{
+    text-decoration:none;
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: white;
+    transition: 0.3s ease-in-out;
+}
+#navbar li a:hover{
+    color: #17cf97;
+}
+#navbar li a:hover::after,
+#navbar li a:active::after {
+    content:'';
+    width:30%;
+    height: 2px;
+    background: #17cf97;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
+}
+#mobile i {
+    color:#fff;
+    align-items: center;
+}
+#mobile {
+    display:none;
+}
+@media screen and (max-width:769px){
+    #navbar{
+        display:flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content:flex-start;
+        position: fixed;
+        top: 90px;
+        right: -300px;
+        width:300px;
+        height:100vh;
+        background: #2a3239;
+        box-shadow: 0 40px 60px rgba(0,0,0,0).01;
+        padding: 40px 0 0 10px;
+        transition: 0.3s ease-in-out;
     }
-        
-        a.active {
-            svg{
-                color: blue;
-            }
-        }
-        
+    #navbar.active {
+        right:0px;
+    }
+    #navbar li{
+        margin-bottom: 25px;
+    }
+    #mobile {
+        display:block;
+    }
+    #mobile i{
+        font-size:24px;
+        cursor: pointer;
+    }
 }
 .logo {
-    position:relative;
-    height:250px;
-    width:250px;
-    top:1rem;
-    right:10rem;
-  
-    
-}
-
-.login-link {
-    margin-left: 15%;
-}
-.create-link {
+    height:180px;
+    width:180px;
+  }
+  .login-link {
     border-style:solid;
-    border-radius:5px;
-   
-    
-    
-}
+    border-radius:10px;
+  }
+  .signup-link {
+    border-style:solid;
+    border-radius:10px;
+  }
