--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -24,7 +24,9 @@
     text-shadow: 1px 1px black;
     font-size: 43px;
     border-radius:15px;
+    border-color:#0074B7;
     border-style:solid;
+    font-weight:900;
     background-color:white;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
@@ -99,6 +101,8 @@
   0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
+  border-color:#0074B7;
+  
 }
 
 .quotebtn {
@@ -111,6 +115,8 @@
   0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
+  border-color:#0074B7;
+  
 }
 .quotebtn:hover {
   background-color: white;
