--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -17,17 +17,17 @@
     height:25vh;
     width:35vw;
     left:35%;
-    color:orange;
+    color:white;
     animation: fadeIn 4s;
     text-align: center;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     text-shadow: 1px 1px black;
-    font-size: 43px;
+    font-size: 42px;
     border-radius:15px;
     border-color:#0074B7;
     border-style:solid;
     font-weight:900;
-    background-color:white;
+    background-color:#1b2430;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
