--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -120,11 +120,11 @@
 }
 .quotebtn:hover {
   background-color: white;
-  color:black;
+  color:#0074B7;
 }
 .contactbtn:hover {
   background-color: white;
-  color:black;
+  color:#0074B7;
 }
 .btn-alignment {
   display:flex;
