button style changes

--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -104,6 +104,7 @@
   font-size:20px;
   border-color:#0074B7;
   transition: 0.3s ease-in-out;
+  font-weight:800;
   
 }
 
@@ -119,7 +120,7 @@
   font-size:20px;
   border-color:#0074B7;
   transition: 0.3s ease-in-out;
-  
+  font-weight:800;
 }
 .quotebtn:hover {
   background-color: white;
