--- a/client/paneless/src/components/Navbar/index.scss
+++ b/client/paneless/src/components/Navbar/index.scss
@@ -92,8 +92,10 @@ nav {
   .login-link {
     border-style:solid;
     border-radius:10px;
+    border-color:orange;
   }
   .signup-link {
     border-style:solid;
     border-radius:10px;
+    border-color:orange;
   }
