--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -23,7 +23,7 @@
     color:white;
     animation: fadeIn 3s 2s backwards;
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:monospace;
     text-shadow: 1px 1px black;
     font-size: 2.8vw;
     border-radius:15px;
@@ -76,7 +76,7 @@
   color:orange;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
-  border-color:orange;
+  border-color:white;
   transition: 0.3s ease-in-out;
   font-weight:800;
   
@@ -88,7 +88,7 @@
   border-radius:15px;
   background-color:#0074B7;
   color:orange;
-  border-color:orange;
+  border-color:white;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
   
