--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -27,11 +27,11 @@
     text-shadow: 1px 1px black;
     font-size: 2.8vw;
     border-radius:15px;
-    border-color:#0074B7;
+    border-color:black;
     border-style:solid;
     font-weight:900;
     background-color:#1b2430;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 
@@ -71,7 +71,7 @@
 .contactbtn {
   height:5vh;
   width:12vw;
-  border-radius:15px;
+  border-radius:10px;
   background-color:#0074B7;
   color:orange;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
@@ -85,7 +85,7 @@
 .quotebtn {
   height:5vh;
   width:12vw;
-  border-radius:15px;
+  border-radius:10px;
   background-color:#0074B7;
   color:orange;
   border-color:white;
