--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -73,7 +73,7 @@
   width:12vw;
   border-radius:25px;
   background-color:#0074B7;
-  color:orange;
+  color:white;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
   border-color:white;
@@ -87,7 +87,7 @@
   width:12vw;
   border-radius:25px;
   background-color:#0074B7;
-  color:orange;
+  color:white;
   border-color:white;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
