changes to google maps api styling

--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -98,10 +98,12 @@
 .quotebtn:hover {
   background-color: white;
   color:#0074B7;
+  border-color:#0074B7;
 }
 .contactbtn:hover {
   background-color: white;
   color:#0074B7;
+  border-color:#0074B7;
 }
 .btn-alignment {
   display:flex;
