--- a/client/paneless/src/components/Home/index.scss
+++ b/client/paneless/src/components/Home/index.scss
@@ -1,6 +1,8 @@
 .map-container {
     width: 55%;
     height: 50vh;
+    border-style:solid;
+    border-radius:5px;
 }
 .map-section {
     width:80%;
