--- a/client/paneless/src/components/Home/index.scss
+++ b/client/paneless/src/components/Home/index.scss
@@ -26,7 +26,7 @@
    display:flex;
    flex-direction: row;
    position:absolute;
-   top:120vh;
+   top:158vh;
    left:55vw;
    gap:1vw;
     
@@ -45,7 +45,7 @@
 }
 .h2 {
     position:absolute;
-    top:110vh;
+    top:150vh;
     left:55vw;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     height:5vh;
@@ -56,3 +56,102 @@ ul.no-bullets {
     padding: 0; /* Remove padding */
     margin: 0; /* Remove margins */
   }
+
+  .whats-next {
+    height:20vh;
+    width:100%;
+   
+    margin:auto;
+    display:flex;
+    flex-direction: row;
+  }
+  .hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+.whats-h2 {
+    text-align: center;
+    font-size:50px;
+}
+.box-1 {
+    width:33.33%;
+ 
+    height:100%;
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    font-size:20px;
+    font-weight:600;
+
+}
+.box-2 {
+    width:33.33%;
+    
+    height:100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size:20px;
+    font-weight:600;
+}
+.box-3 {
+    width:33.33%;
+    
+    height:100%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size:20px;
+    font-weight:600;
+
+}
+.request-btn1{
+    width:15vw;
+    height:3vh;
+    background-color: #1b2430;
+    color:white;
+    border-radius:10px;
+    font-size:20px;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    
+}
+.request-btn1:hover{
+    background-color:#0074B7;
+    color:white;
+     
+  transition: 0.3s ease-in-out;
+}
+.button-margin{
+    width:100%;
+    display:flex;
+    justify-content: center;
+}
+.icon-1{
+    border-style:solid;
+    height:15vh;
+    width:10vw;
+    padding-top:3vh;
+    background-color: #1b2430;
+    border-radius:50%;
+}
+.icon-2{
+    border-style:solid;
+    height:15vh;
+    width:10vw;
+    padding-top:3vh;
+    background-color: #1b2430;
+    border-radius:50%;
+}
+.icon-3{
+    border-style:solid;
+    height:15vh;
+    width:10vw;
+    padding-top:3vh;
+    background-color: #1b2430;
+    border-radius:50%;
+}
