--- a/client/paneless/src/App.scss
+++ b/client/paneless/src/App.scss
@@ -8,3 +8,20 @@ body {
     margin: 0;
     min-height: 100%;
 }
+@import 'loaders.css/src/animations/ball-rotate.scss';
+
+
+.loader-active {
+  display: block;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  bottom:0;
+  top:0;
+  width: 50px;
+  height: 50px;
+  animation: fadeOut 1s 1s;
+  animation-fill-mode: forwards;
+  
+}
