--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -21,7 +21,7 @@
     width:35vw;
     left:32%;
     color:white;
-    animation: fadeIn 3s 2s backwards;
+  
     text-align: center;
     font-family:monospace;
     text-shadow: 1px 1px black;
@@ -33,6 +33,9 @@
     background-color:#1b2430;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+
+   
+    opacity: 0.9;
 }
 
 .logo-animate {
