logini and sign up styling

--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -74,12 +74,12 @@
 .contactbtn {
   height:5vh;
   width:12vw;
-  border-radius:25px;
-  background-color:#0074B7;
+  border-radius:15px;
+  background-color:orange;
   color:white;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
-  border-color:white;
+  border-color:#0074B7;
   transition: 0.3s ease-in-out;
   font-weight:800;
   
@@ -88,10 +88,10 @@
 .quotebtn {
   height:5vh;
   width:12vw;
-  border-radius:25px;
-  background-color:#0074B7;
+  border-radius:15px;
+  background-color:orange;
   color:white;
-  border-color:white;
+  border-color:#0074B7;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
   
