--- a/client/paneless/src/components/SignUp/index.scss
+++ b/client/paneless/src/components/SignUp/index.scss
@@ -8,7 +8,7 @@
     
 }
 .login {
-    height:50vh;
+    height:65vh;
     width:35%;
     position: fixed;
     top: 50%;
@@ -20,22 +20,19 @@
     content: ' ';
     opacity: 0.93;
     animation: fadeIn 4s;
-    border-radius:50px;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
    
 }
 .form {
-    padding-top:10%;
-    gap:10%;
+    
     display:flex;
     flex-direction: column;
-    height:15vh;
+    height:40vh;
     width:80%;
     position:fixed;
     top: 50%;
     left:50%;
     transform: translate(-50%, -50%);
+
 }
 .loginh2 {
     color:white;
@@ -48,11 +45,20 @@
     text-align: center;
     font-size:20px;
 }
-.username {
+.firstname {
+    font-size:25px;
+}
+.emailaddress {
+    font-size:25px;
+}
+.lastname {
     font-size:25px;
 }
 .password {
     font-size:25px;
+}
+.password-confirm {
+    font-size: 25px;
 }
 .loginbtn{
     font-size:28px;
