--- a/client/paneless/src/components/Home/index.scss
+++ b/client/paneless/src/components/Home/index.scss
@@ -26,7 +26,7 @@
    display:flex;
    flex-direction: row;
    position:absolute;
-   top:158vh;
+   top:260vh;
    left:55vw;
    gap:1vw;
     
@@ -45,7 +45,7 @@
 }
 .h2 {
     position:absolute;
-    top:150vh;
+    top:250vh;
     left:55vw;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     height:5vh;
@@ -155,4 +155,94 @@ ul.no-bullets {
     padding-top:3vh;
     background-color: #1b2430;
     border-radius:50%;
+}
+.about-us {
+    height:50vh;
+    width:80%;
+    margin:auto;
+    display:flex;
+    flex-direction: row;
+ 
+}
+.about-box {
+    height:100%;
+    width:50%;
+   
+}
+.about-box1 {
+    height:100%;
+    width:50%;
+    
+ 
+   
+}
+.image-5 {
+    height:100%;
+    width:100%;
+    border-radius:15px;
+   
+}
+.about-box2 {
+    height:50%;
+    width:80%;
+    border-style:solid;
+    margin:auto;
+    position:relative;
+    top:25%;
+    border-radius:15px;
+    background-color:white;
+    color:black;
+    font-size:20px;
+    text-align: start;
+    font-weight:400;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+   
+
+}
+.abouth2 {
+    color:#0074B7;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.image-6 {
+    height:100%;
+    width:100%;
+    border-radius:15px;
+}
+.reviews {
+    height:50vh;
+    width:80%;
+    margin:auto;
+    display:flex;
+    flex-direction: row;
+ 
+}
+.review-box {
+    height:100%;
+    width:50%;
+    
+    
+ 
+   
+}
+.review-box1 {
+    height:100%;
+    width:50%;
+    
+}
+.review-box2{
+    height:50%;
+    width:80%;
+    border-style:solid;
+    margin:auto;
+    position:relative;
+    top:25%;
+    border-radius:15px;
+    background-color:white;
+    color:black;
+    font-size:20px;
+    text-align: center;
+    font-weight:400;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
