--- a/client/paneless/src/components/Home/index.scss
+++ b/client/paneless/src/components/Home/index.scss
@@ -26,7 +26,7 @@
    display:flex;
    flex-direction: row;
    position:absolute;
-   top:260vh;
+   top:300vh;
    left:55vw;
    gap:1vw;
     
@@ -45,7 +45,7 @@
 }
 .h2 {
     position:absolute;
-    top:250vh;
+    top:290vh;
     left:55vw;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     height:5vh;
@@ -245,4 +245,52 @@ ul.no-bullets {
     font-weight:400;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
+.featured {
+    height:40vh;
+    width:100%;
+    border-style:solid;
+    margin:auto;
+    background-color:#023B63;
+}
+.featuredh2 {
+    color:white;
+    text-align: center;
+    font-size:40px;
+    
+}
+.featured-projects {
+    display:flex;
+    flex-direction: row;
+    gap:5%;
+    justify-content: center;
+    padding-top:5%;
+}
+.before-1 {
+    height:15vh;
+    width:15vw;
+    
+    border-radius:15px;
+}
+.after-1 {
+    height:15vh;
+    width:15vw;
+    border-radius:15px;
+   
+}
+.before-2 {
+    height:15vh;
+    width:15vw;
+    border-radius:15px;
+  
+}
+.after-2 {
+    height:15vh;
+    width:15vw;
+    border-radius:15px;
+    
+}
+.before-after {
+    text-align: center;
+    color:white;
 }
