--- a/client/paneless/src/components/Login/index.scss
+++ b/client/paneless/src/components/Login/index.scss
@@ -8,7 +8,25 @@
     
 }
 .login {
-    height:50vh;
+    height:60vh;
+    width:35%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+  
+    background-color:#1b2430;
+    content: ' ';
+    opacity: 0.93;
+    animation: fadeIn 4s;
+    border-radius:50px;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+   
+}
+.signup {
+    height:60vh;
     width:35%;
     position: fixed;
     top: 50%;
