--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -25,7 +25,7 @@
     text-align: center;
     font-family:monospace;
     text-shadow: 1px 1px black;
-    font-size: 2.8vw;
+    font-size: 2.55vw;
     border-radius:15px;
     border-color:black;
     border-style:solid;
@@ -75,28 +75,30 @@
   height:5vh;
   width:12vw;
   border-radius:15px;
-  background-color:orange;
-  color:white;
+  background-color:transparent;
+  color:orange;
+  border-color:orange;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
-  border-color:#0074B7;
   transition: 0.3s ease-in-out;
-  font-weight:800;
+  font-weight:900;
   
 }
 
 .quotebtn {
   height:5vh;
   width:12vw;
+  
   border-radius:15px;
-  background-color:orange;
-  color:white;
-  border-color:#0074B7;
+  background-color:transparent;
+  color:#0074B7;
+  border-color:white;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size:20px;
   
+  
   transition: 0.3s ease-in-out;
-  font-weight:800;
+  font-weight:900;
 }
 .quotebtn:hover {
   background-color: white;
