--- a/client/paneless/src/components/Home/index.scss
+++ b/client/paneless/src/components/Home/index.scss
@@ -249,7 +249,7 @@ ul.no-bullets {
 .featured {
     height:40vh;
     width:100%;
-    border-style:solid;
+    border-radius:15px;
     margin:auto;
     background-color:#023B63;
 }
