--- a/client/paneless/src/components/Home/index.scss
+++ b/client/paneless/src/components/Home/index.scss
@@ -109,12 +109,20 @@ ul.no-bullets {
     font-weight:600;
 
 }
+@media screen and (max-width: 1000px) {
+    .icon-1x {
+        height:8vh;
+        width:8vw;
+        padding-bottom: 2vh;
+    }
+  
+  }
 .request-btn1{
     width:15vw;
     height:4vh;
   
     border-radius:8px;
-    font-size:20px;
+    font-size:16px;
     background-color:#0074B7;
     color:white;
 
@@ -164,6 +172,44 @@ ul.no-bullets {
     flex-direction: row;
  
 }
+@media screen and (max-width: 1000px) {
+    .ptag2 {
+        font-size:15px;
+    }
+    .ptag3 {
+        font-size:15px;
+    }
+    .stary {
+        font-size:20px;
+       
+    }
+  
+ 
+  }
+  @media screen and (max-width: 600px) {
+    .ptag2 {
+        font-size:10px;
+    }
+    .ptag3 {
+        font-size:10px;
+    }
+    .stary {
+        font-size:20px;
+       
+    }
+    .box-1 {
+        font-size:15px
+    }
+    .box-2 {
+        font-size:15px
+    }
+    .box-3 {
+        font-size:15px
+    }
+    .request-btn1{
+        font-size:8px;
+    }
+  }
 .about-box {
     height:100%;
     width:50%;
