--- a/client/paneless/src/components/Login/index.scss
+++ b/client/paneless/src/components/Login/index.scss
@@ -8,8 +8,8 @@
     
 }
 .login {
-    height:60vh;
-    width:35%;
+    height:45vh;
+    width:30%;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -27,7 +27,7 @@
 }
 .signup {
     height:60vh;
-    width:35%;
+    width:30%;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -43,8 +43,19 @@
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
    
 }
+.form-1 {
+    gap:10%;
+    display:flex;
+    flex-direction: column;
+    height:15vh;
+    width:80%;
+    position:fixed;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+}
 .form {
-    padding-top:10%;
+    padding-top: 15%;
     gap:10%;
     display:flex;
     flex-direction: column;
