--- a/client/paneless/src/components/SignUp/index.scss
+++ b/client/paneless/src/components/SignUp/index.scss
@@ -76,3 +76,8 @@
 .login-link1 {
     color:#0074B7;
 }
+@media screen and (max-width: 1000px) {
+    .signup-icon{
+       font-size:50px;
+    }
+   }
