--- a/client/paneless/src/components/Home/image.scss
+++ b/client/paneless/src/components/Home/image.scss
@@ -1,9 +1,9 @@
  .logoBox {
     position: absolute;
-    top: -5%;
-    height:25vh;
-    width:25vw;
-    left:38%;
+    top: -2%;
+    height:22vh;
+    width:22vw;
+    left:40%;
     background-image: url('../../assets/images/transparent.png');
     background-position: center;
     background-size: cover;
@@ -21,11 +21,10 @@
     width:35vw;
     left:32%;
     color:white;
-  
+    font-size:42px;
     text-align: center;
     font-family:monospace;
     text-shadow: 1px 1px black;
-    font-size: 2.55vw;
     border-radius:15px;
     border-color:black;
     border-style:solid;
@@ -36,6 +35,11 @@
 
    
     opacity: 0.9;
+}
+.paragraph {
+  width:100%;
+
+  height:50%;
 }
 
 .logo-animate {
@@ -79,7 +83,7 @@
   color:orange;
   border-color:orange;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  font-size:20px;
+  font-size:15px;
   transition: 0.3s ease-in-out;
   font-weight:900;
   
@@ -91,10 +95,11 @@
   
   border-radius:15px;
   background-color:transparent;
-  color:#0074B7;
+  color:white;
+  background-color: #0074B7;
   border-color:white;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-  font-size:20px;
+  font-size:15px;
   
   
   transition: 0.3s ease-in-out;
@@ -115,6 +120,16 @@
   flex-direction:row;
   justify-content: center;
   gap:5%;
+  position:absolute;
+ 
+
+  width:100%;
+  height:50%;
+  padding-top:10%;
+
+  
+
+  
 }
 @media screen and (max-width: 1000px) {
   .quotebtn{
