code changes to prepare for stripe content

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -28,3 +28,9 @@ body {
 html {
   scroll-behavior: smooth;
 }
+.container {
+  width: 85%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
