--- a/client/src/components/Cart/index.scss
+++ b/client/src/components/Cart/index.scss
@@ -1,6 +1,6 @@
 .cart {
     position: fixed;
-    top: 0;
+    top: 200px;
     right: 0;
     min-width: 20%;
     max-width: 30%;
@@ -33,15 +33,15 @@
   
   .cart-closed {
     position: fixed;
-    top: 2%;
-    right: 1%;
-    font-size: 2rem;
+    top: 10%;
+    right: 2%;
+    font-size: 3rem;
     cursor: pointer;
-    background-color: var(--secondary);
+    background-color: blue;
     border-radius: 50%;
-    padding: .25rem;
-    width: 50px;
-    height: 50px;
+    padding: 1.25rem;
+    width: 100px;
+    height: 100px;
   }
   
   .cart-closed:hover {
