--- a/client/src/components/Footer/index.scss
+++ b/client/src/components/Footer/index.scss
@@ -1,6 +1,7 @@
 .footer {
     height:25vh;
     width:100%;
+   border-radius:5px;
     
     margin: 0;
     margin-top:auto;
@@ -13,6 +14,7 @@
     height:25vh;
 }
 .span-1 {
+    text-align: center;
     padding-top:7vh;
     height:100%;
     width:25%;
@@ -22,6 +24,7 @@
 }
 .span-2 {
     padding-top:7vh;
+    text-align: center;
     height:100%;
     width:25%;
     font-size:15px;
@@ -29,6 +32,7 @@
 }
 .span-3 {
     padding-top:7vh;
+    text-align: center;
     height:100%;
     width:25%;
     font-size:15px;
