--- a/client/src/components/Home/image.scss
+++ b/client/src/components/Home/image.scss
@@ -122,7 +122,7 @@
 
   width:100%;
   height:50%;
-  padding-top:10%;
+  padding-top:20%;
 
   
 
@@ -137,7 +137,7 @@
     font-size: 1.2vw;
     width:12vw;
   }
-  
+ 
 
 }
 @media screen and (max-width: 500px) {
@@ -162,6 +162,7 @@
   border-color:#0074B7;
 }
 .testing13{
-  font-size:1.25rem;
+  font-size:2.8vw;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   
 }
