--- a/client/src/components/Home/image.scss
+++ b/client/src/components/Home/image.scss
@@ -30,10 +30,7 @@
     border-style:solid;
     font-weight:900;
     background-color:#1b2430;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-
-   
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     opacity: 0.9;
 }
 .paragraph {
