--- a/client/src/components/Home/index.scss
+++ b/client/src/components/Home/index.scss
@@ -241,8 +241,8 @@ ul.no-bullets {
     font-size:20px;
     text-align: start;
     font-weight:400;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+
    
 
 }
@@ -289,8 +289,7 @@ ul.no-bullets {
     font-size:20px;
     text-align: center;
     font-weight:400;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 .featured {
     height:40vh;
