--- a/client/src/components/Home/image.scss
+++ b/client/src/components/Home/image.scss
@@ -30,7 +30,14 @@
     border-style:solid;
     font-weight:900;
     background-color:#1b2430;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    box-shadow:
+    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07)
+  ;
     opacity: 0.9;
 }
 .paragraph {
