--- a/client/src/components/Home/index.scss
+++ b/client/src/components/Home/index.scss
@@ -241,7 +241,14 @@ ul.no-bullets {
     font-size:20px;
     text-align: start;
     font-weight:400;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    box-shadow:
+    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07)
+  ;
 
    
 
@@ -254,6 +261,7 @@ ul.no-bullets {
     height:100%;
     width:100%;
     border-radius:15px;
+    
 }
 .reviews {
     height:50vh;
@@ -289,7 +297,14 @@ ul.no-bullets {
     font-size:20px;
     text-align: center;
     font-weight:400;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    box-shadow:
+    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07)
+  ;
 }
 .featured {
     height:40vh;
