style chnages to profile page

--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -2,8 +2,22 @@
     height:80vh;
     width:80vw;
     margin:auto;
+    border-style:solid;
+    border-radius:50px;
+    background-color: white;
+ 
+    box-shadow:
+    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07)
+  ;
+
   
 }
+
 .profile-avatar {
     text-align: center;
     height:20vh;
@@ -11,6 +25,7 @@
     border-style:solid;
     margin:auto;
     border-radius:50%;
+    background-color:white;
 }
 .avatar-btn {
     position: relative;
@@ -29,5 +44,15 @@
     border-width:thin;
     border-radius:25px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    font-weight:lighter;
+    text-indent:25px;
+    background-color: white;
+    
 
+}
+.basic-h3 {
+    text-align: center;
+}
+.greeting {
+    font-style: italic;
 }
