--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -1,11 +1,36 @@
 .profile-box {
-    height:80vh;
-    width:80vw;
+    height:55vh;
+    width:50vw;
     margin:auto;
     border-style:solid;
-    border-radius:50px;
-    background-color: white;
+    border-radius:80px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  
+    background-color:#1b2430;
+    content: ' ';
+    opacity: 0.98;
+  
  
+
+  
+}
+.profile-background {
+    height:80vh;
+    width:100%;
+    background-image: url('../../assets/images/aboutus.png');
+    background-size:cover;
+}
+.profile-avatar {
+    text-align: center;
+    height:20vh;
+    width:20vw;
+    border-style:solid;
+    margin:auto;
+    border-radius:50%;
+    background-color:white;
     box-shadow:
     2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
     6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
@@ -15,17 +40,6 @@
     100px 100px 80px rgba(0, 0, 0, 0.07)
   ;
 
-  
-}
-
-.profile-avatar {
-    text-align: center;
-    height:20vh;
-    width:20vw;
-    border-style:solid;
-    margin:auto;
-    border-radius:50%;
-    background-color:white;
 }
 .avatar-btn {
     position: relative;
@@ -40,10 +54,18 @@
     right:0;
     height:25vh;
     width:50vw;
-    top:40vh;
+    top:25vh;
     border-width:thin;
-    border-radius:25px;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    border-radius:10px;
+    box-shadow:
+    2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02),
+    6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035),
+    22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05),
+    100px 100px 80px rgba(0, 0, 0, 0.07)
+  ;
+
     font-weight:lighter;
     text-indent:25px;
     background-color: white;
@@ -55,4 +77,6 @@
 }
 .greeting {
     font-style: italic;
+    color:white;
+    
 }
