style changes to profile page

--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -66,11 +66,17 @@
     font-style: italic;
     color:white;
     position:absolute;
-    top:15vh;
+    top:5vh;
     
 }
 .profile-image{
     border-radius: 50%;
     height:200px;
     width:200px;
+}
+.uploadh2 {
+    color:white;
+    position:absolute;
+    top:15vh;
+    text-align: center;
 }
