--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -8,6 +8,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    animation: fadeIn 4s;
   
     background-color:#1b2430;
     content: ' ';
