--- a/client/src/components/Home/index.scss
+++ b/client/src/components/Home/index.scss
@@ -256,6 +256,7 @@ ul.no-bullets {
 .abouth2 {
     color:#0074B7;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
 .image-6 {
     height:100%;
