--- a/client/src/components/Footer/index.scss
+++ b/client/src/components/Footer/index.scss
@@ -1,21 +1,23 @@
+
 .footer {
-    height:25vh;
+    height:20rem;
     width:100%;
-   border-radius:5px;
-    
+    border-radius:5px;
+    position:relative;
+    bottom:0;
     margin: 0;
-    margin-top:auto;
     background-color:#1b2430;
     display:flex;
     flex-direction: row;
 }
 .logo-1 {
-    width:25%;
-    height:25vh;
+    width:20rem;
+    height:20rem;
+    padding-bottom:5rem;
 }
 .span-1 {
     text-align: center;
-    padding-top:7vh;
+    padding-top:3rem;
     height:100%;
     width:25%;
     font-size:15px;
@@ -23,7 +25,7 @@
     color:white;
 }
 .span-2 {
-    padding-top:7vh;
+    padding-top:3rem;
     text-align: center;
     height:100%;
     width:25%;
@@ -31,7 +33,7 @@
     color:white;
 }
 .span-3 {
-    padding-top:7vh;
+    padding-top:3rem;
     text-align: center;
     height:100%;
     width:25%;
@@ -43,4 +45,16 @@
         display:none;
         visibility: hidden;
     }
+}
+@media screen and (max-height: 850px) {
+    .span-3 {
+        font-size:10px;
+    }
+    .span-2 {
+        font-size:10px;
+    }
+    .span-1 {
+        font-size:10px;
+    }
+   
 }
