--- a/client/src/components/Navbar/index.scss
+++ b/client/src/components/Navbar/index.scss
@@ -5,7 +5,7 @@ nav {
     background: #1b2430;
     padding: 20px 80px;
     box-shadow: 0 5px 15px rgba(0,0,0, 0.06);
-    height:10vh;
+    height:6rem;
     position:sticky;
     top: 0;
     z-index: 999;
