styling for different screens

--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -1,6 +1,6 @@
 .profile-box {
-    height:60vh;
-    width:55vw;
+    height:35rem;
+    width:50rem;
     margin:auto;
     border-style:solid;
     border-radius:25px;
@@ -26,8 +26,8 @@
 }
 .profile-avatar {
     text-align: center;
-    height:25vh;
-    width:25vw;
+    height:25rem;
+    width:25rem;
     margin:auto;
    
     
@@ -40,9 +40,9 @@
     position:absolute;
     left:0;
     right:0;
-    height:25vh;
-    width:50vw;
-    top:25vh;
+    height:15rem;
+    width:40rem;
+    top:18rem;
     border-width:thin;
     
     box-shadow:
