--- a/client/src/components/Login/index.scss
+++ b/client/src/components/Login/index.scss
@@ -8,7 +8,7 @@
     
 }
 .login {
-    height:45vh;
+    height:30rem;
     width:30%;
     position: fixed;
     top: 50%;
@@ -44,13 +44,14 @@
    
 }
 .form-1 {
+    
     gap:10%;
     display:flex;
     flex-direction: column;
     height:15vh;
     width:80%;
     position:fixed;
-    top: 50%;
+    top: 40%;
     left:50%;
     transform: translate(-50%, -50%);
 }
