--- a/client/src/components/Login/index.scss
+++ b/client/src/components/Login/index.scss
@@ -9,7 +9,7 @@
 }
 .login {
     height:30rem;
-    width:30%;
+    width:25rem;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -21,28 +21,10 @@
     opacity: 0.93;
     animation: fadeIn 4s;
     border-radius:50px;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+   
    
 }
-.signup {
-    height:60vh;
-    width:30%;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    /* bring your own prefixes */
-    transform: translate(-50%, -50%);
-  
-    background-color:#1b2430;
-    content: ' ';
-    opacity: 0.93;
-    animation: fadeIn 4s;
-    border-radius:50px;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(5, 5, 5),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-   
-}
+
 .form-1 {
     
     gap:10%;
@@ -106,4 +88,55 @@
  .icon-user{
     font-size:50px;
  }
+ .login {
+    height:25rem;
+    width:20rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+  
+    background-color:#1b2430;
+    content: ' ';
+    opacity: 0.93;
+    animation: fadeIn 4s;
+    border-radius:50px;
+   
+   
 }
+.username {
+    font-size:15px;
+}
+.password {
+    font-size:15px;
+}
+}
+@media screen and (max-height: 900px) {
+    .icon-user{
+       font-size:50px;
+    }
+    .login {
+       height:25rem;
+       width:20rem;
+       position: fixed;
+       top: 50%;
+       left: 50%;
+       /* bring your own prefixes */
+       transform: translate(-50%, -50%);
+     
+       background-color:#1b2430;
+       content: ' ';
+       opacity: 0.93;
+       animation: fadeIn 4s;
+       border-radius:50px;
+      
+      
+   }
+   .username {
+       font-size:15px;
+   }
+   .password {
+       font-size:15px;
+   }
+   }
