--- a/client/src/components/Home/index.scss
+++ b/client/src/components/Home/index.scss
@@ -209,7 +209,11 @@ ul.no-bullets {
     }
     .stary {
         font-size:20px;
+        
        
+    }
+    .service-area {
+        font-size:10px;
     }
   
  
@@ -237,6 +241,10 @@ ul.no-bullets {
     .request-btn1{
         font-size:8px;
     }
+    .service-area {
+        font-size:10px;
+    }
+  
   }
   @media screen and (max-width: 500px) {
     .ptag2 {
