--- a/client/src/components/Navbar/index.scss
+++ b/client/src/components/Navbar/index.scss
@@ -6,6 +6,7 @@ nav {
     padding: 20px 80px;
     box-shadow: 0 5px 15px rgba(0,0,0, 0.06);
     height:6rem;
+    text-shadow:0em 0em 1.0em orange;
     position:sticky;
     top: 0;
     z-index: 999;
