--- a/client/src/components/WindowScreens/index.scss
+++ b/client/src/components/WindowScreens/index.scss
@@ -103,6 +103,7 @@
     cursor: pointer;
     margin: 0 1px;
     background-color: var(--tertiary);
+    box-shadow:0em 0em 1.0em var(--tertiary);
   }
   
   button:hover {
