--- a/client/src/components/Cart/index.scss
+++ b/client/src/components/Cart/index.scss
@@ -8,8 +8,9 @@
     background-color: var(--light);
     overflow: auto;
     padding: .5rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, .5);
+    box-shadow:0em 0em 1.0em blue;
     border-bottom-left-radius: .5rem;
+
   }
   
   .cart h2 {
@@ -41,6 +42,7 @@
     border-radius: 50%;
     padding: 1.25rem;
     width: 100px;
+    box-shadow:0em 0em 1.0em orange;
     height: 100px;
   }
   
