--- a/client/src/components/SignUp/index.scss
+++ b/client/src/components/SignUp/index.scss
@@ -66,11 +66,13 @@
     background-color:orange;
     color:white;
     border-radius:10px;
+    box-shadow:0em 0em 1.0em orange;
     
 }
 .loginbtn:hover{
     background-color:#0074B7;
     color:white;
+    box-shadow:0em 0em 1.0em #0074B7;
     transition: 0.3s ease-in-out;
     
 }
