--- a/client/src/components/SignUp/index.scss
+++ b/client/src/components/SignUp/index.scss
@@ -10,7 +10,7 @@
 .signup {
     height:45rem;
     width:30rem;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     /* bring your own prefixes */
