--- a/client/src/components/Login/index.scss
+++ b/client/src/components/Login/index.scss
@@ -4,13 +4,14 @@
     border-style:solid;
     background-image: url('../../assets/images/aboutus.png');
     background-size:cover;
+    
     text-align: center;
     
 }
 .login {
     height:30rem;
     width:25rem;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     /* bring your own prefixes */
