style changes to footer

--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -4,7 +4,7 @@
     margin:auto;
     border-style:solid;
     border-radius:25px;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
