--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,6 +7,11 @@
 body {
     margin: 0;
     min-height: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 @import 'loaders.css/src/animations/ball-rotate.scss';
 
