--- a/client/src/components/Home/index.scss
+++ b/client/src/components/Home/index.scss
@@ -354,7 +354,7 @@ ul.no-bullets {
 .about-box {
     height:100%;
     width:50%;
-    box-shadow:0em 0em 1.0em orange;
+    box-shadow:0em 0em 1.0em #0074B7;
    
 }
 .about-box1 {
@@ -388,7 +388,7 @@ ul.no-bullets {
 
 }
 .abouth2 {
-    color:black;
+    color:#0074B7;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
 }
@@ -418,7 +418,7 @@ ul.no-bullets {
 .review-box1 {
     height:100%;
     width:50%;
-    box-shadow:0em 0em 1.0em orange;
+    box-shadow:0em 0em 1.0em #0074B7;
     
 }
 .review-box2{
