--- a/client/src/components/Login/index.scss
+++ b/client/src/components/Login/index.scss
@@ -4,6 +4,7 @@
     border-style:solid;
     background-image: url('../../assets/images/aboutus.png');
     background-size:cover;
+    background-position:center;
     text-align: center;
     
 }
