--- a/client/src/components/Profile/index.scss
+++ b/client/src/components/Profile/index.scss
@@ -23,6 +23,7 @@
     width:100%;
     background-image: url('../../assets/images/aboutus.png');
     background-size:cover;
+    background-position: center;
 }
 .profile-avatar {
     text-align: center;
